<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.AboutDevActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_about_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/pembimbing_proyek_akhir"
                android:textColor="@color/dongker_blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_img_dev"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/title_about_dev">

                <ImageView
                    android:id="@+id/img_pembimbing"
                    android:layout_width="124dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="144dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/img_content"
                    android:src="@drawable/dosbim"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="124dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/fat_hah_noor_prawita_st_mt"
                    android:textColor="@color/dongker_blue"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_pembimbing" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/title_about_pembimbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/developer_arfi"
                android:textColor="@color/dongker_blue"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout_img_dev" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_img_pembimbing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/title_about_pembimbing">

                <ImageView
                    android:id="@+id/img_dhaus"
                    android:layout_width="124dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/img_content"
                    android:src="@drawable/pas_foto_dhaus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/firdhaus_dwi_sukma"
                    android:textColor="@color/dongker_blue"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_dhaus"
                    tools:ignore="TextSizeCheck" />

                <ImageView
                    android:id="@+id/img_opal"
                    android:layout_width="124dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="42dp"
                    android:contentDescription="@string/img_content"
                    android:src="@drawable/opal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="60dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/m_naufal"
                    android:textSize="12sp"
                    android:textColor="@color/dongker_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_opal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:text="@string/contact_us"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/dongker_blue"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout_img_pembimbing"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/email_arfitness62_gmail_com"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/dongker_blue"
                app:layout_constraintTop_toBottomOf="@id/contact_us"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>